--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -1,13 +1,14 @@
 .features {
-  padding: 5rem 0;
+  padding: 0;
   background: white;
 }
 
 .section-title {
   text-align: center;
   font-size: 2.5rem;
-  margin-bottom: 1rem;
+  margin: 70px 10px 0 10px;
   color: #1f2937;
+  padding: 40px 0;
 }
 
 .section-subtitle {
