--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  background: #fff;
+  background: #F4F4F4;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   position: fixed;
   width: 100%;
@@ -17,8 +17,8 @@ nav {
 }
 
 .logo img {
-  height: 80px;
-  width: 80px;
+  height: 100px;
+  width: 120px;
 }
 
 .nav-links {
@@ -40,7 +40,7 @@ nav {
 }
 
 .nav-links a:hover {
-  color: #461111;
+  color: #6e6e6e;
 
 }
 .nav-container > .language-switcher {
@@ -60,12 +60,12 @@ nav {
   background-color: #4b5563;
 }
 .btn1 {
-  background-color: #461111;
+  background-color: #0275d8;
   color: white;
   text-decoration: none;
 }
 .btn1:hover {
-  background-color: #a43030;
+  background-color: #071725;
   color: white;
   text-decoration: none;
 }
