--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary: #461111;
+  --secondary: #bcbcbc;
+  --light: #f7f7f7;
 }
 
 a {
@@ -32,7 +36,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-family: 'Poppins', sans-serif;
+  font-size: 3em;
   line-height: 1.1;
 }
 
