--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -20,7 +20,7 @@
 
 .features-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   align-items: center;
 }
@@ -54,7 +54,7 @@
 .feature-icon svg {
   width: 40px;       /* Tamaño del ícono */
   height: 40px;
-  fill: #461111;       /* Color del ícono */
+  fill: #0275d8;       /* Color del ícono */
 }
 
 @media (max-width: 1024px) {
